                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.5.3

  *) Add support to apr_memcache for unix domain sockets. PR 54573 [Remi
     Gacogne <rgacogne+asf aquaray.com>]

Changes with APR-util 1.5.2

  *) Windows: Add command line makefiles. [Gregg Smith]

  *) apr_uri_parse(): Do not accept invalid characters in the scheme.
     Per RFC 3986 3.3, enforce that the first segment of a relative path does
     not contain a colon. PR 52479. [Stefan Fritsch]

  *) Fix memory leak in hook sorting function. PR 51256.
     [<horowity checkpoint com>]

  *) Speedup md5 calculation by avoiding some copying on little endian
     architectures. PR 49011. [Stefan Fritsch, Stefan Fuhrmann
     <stefanfuhrmann alice-dsl de>]

  *) Use heap memory for crypt in apr_password_validate(), to reduce stack
     usage. PR 54572. [Stefan Fritsch]

  *) Fix password validation failure for all crypt and crypt_r based
     algorithms. PR 54603.  [Harvey Eneman <harvey.eneman oracle.com>]

  *) Fix syntax error in crypto/apr_passwd.c on non-glibc systems. PR 54275.
     [Stefan Fritsch]

  *) Fix potential data corruption in apr_brigade_write() and friends if
     the last bucket of the brigade is a heap bucket that has been split,
     and there are still references to the next part of the original bucket
     in use. [Stefan Fritsch]

  *) Remove duplicated logic in apr_brigade_puts(). PR 53740. [Christophe
     Jaillet <christophe jaillet wanadoo fr>]

  *) apr_crypto: If --with-crypto is passed to configure but no crypto
     libraries are enabled, autodetect available libraries.  [Jeff Trawick]

  *) memcache: Fix dead server retry logic.  [Gavin Shelley <columbusmonkey me.com>]

Changes with APR-util 1.5.1

  *) testmemcache: Fix crash. PR 52705. [Peter Poeml <peter poeml de>]

  *) MinGW: Support shared builds of apr-util when apr is shared.
     PR 46175.  [Carlo Bramini <carlo.bramix libero.it>, Jeff Trawick]
